# register-service-revision

./: .pre-commit-config.yaml  Dockerfile  README.md  action.yaml  pyproject.toml  setup.cfg
.github/workflows/: build-docker-image.yml  python-ci.yml  release.yml  update-pull-request.yml
register_service_revision/: entrypoint.py
tests/: test_entrypoint.py
